syntax="proto3";

package auth;

option go_package = "./auth/pb";
import "google/protobuf/timestamp.proto";

// register
message RegisterRequest {
    string email = 1;
    string name = 2;
    string username = 3;
    string password = 4;
    int64 age = 5;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
    RegisterRequest data = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// login
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

// validate 
message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int64 status = 1;
    string error = 2;
    int64 userId = 3;
}

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse){}
    rpc Login (LoginRequest) returns (LoginResponse){}
    rpc Validate (ValidateRequest) returns (ValidateResponse){}
}